--- a/certifications_&_awards.html
+++ b/certifications_&_awards.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Sitio Web</title>
 </head>
-<body>
+<body style="display: flex; flex-direction: column; min-height: 100vh; margin: 0;">
     <header>
-        <h1>Portfolio profesional - Certificaciones y Reconocimientos</h1>
+        <div style="font-size: larger; color: rgb(19, 151, 30); text-align: center;">
+            <h1>
+                <u>Certificaciones y Reconocimientos</u>
+            </h1>
+        </div>
         <nav>
             <ul>
                 <li> <a href="index.html">HOME</a></li>
@@ -20,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main style="flex-grow: 1;">
         <h2>
             <u>Certificado de Programador Python - Coderhouse</u>
         </h2>
