--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Sitio Web</title>
+    <title>Mí Sitio Web</title>
 </head>
 <body style="display: flex; flex-direction: column; min-height: 100vh; margin: 0;">
     <header>
