--- a/sobre_mi.html
+++ b/sobre_mi.html
@@ -29,10 +29,10 @@
             <u>Biografía breve</u>
         </h2>
 
-        <p>Vivo en Canning-Ezeiza, Buenos Aires, desde hace más de 10 años. Antes de mudarme a esta zona, vivía en un departamento en
-            Villa Celina desde que nací hasta los 9 años. Cursé mi primaria en el Instituto Amanecer, en CABA, entre 2011 y 2013.
-            En 2014, me mudé a Canning e ingrese a la escuela 'Humanos', donde completé tanto la primaria como la secundaria,
-            graduándome en 2022.</p>
+        <p>Nací el 13 de septiembre de 2004 y vivo en Canning-Ezeiza, Buenos Aires. Llevo más de 10 años en esta zona,
+            pero antes vivía en un departamento en Villa Celina, donde pasé mis primeros 9 años. Cursé mi primaria en el
+            Instituto Amanecer en CABA entre 2011 y 2013. En 2014, me mudé a Canning e ingresé a la escuela 'Humanos',
+            donde completé tanto la primaria como la secundaria, graduándome en 2022.</p>
 
         <div style="display: flex; justify-content: center; gap: 20px; text-align: center;">
             <div>
