FEAT - diseños agregados

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="pages/sobre_mi.html">Sobre mí</a></li>
+                    <li><a href="pages/sobre_mi.html">Sobre Mí</a></li>
                     <li><a href="pages/curriculum.html">Currículum</a></li>
                     <li><a href="pages/contacto.html">Contacto</a></li>
                     <li><a href="pages/proyecto.html">Proyecto</a></li>
@@ -25,7 +25,7 @@
         <div class="profile-container">
             <img src="img/fotopersonal.webp" alt="Foto de Ezequiel" class="profile-photo">
             <div class="profile-info">
-                <h2>Ezequiel Souza Arraigada</h2>
+                <h1>Ezequiel Souza Arraigada</h1>
                 <p>Estudiante de Licenciatura en Gestión de Tecnología de la Información</p>
             </div>
         </div>
@@ -36,6 +36,7 @@
                 <a href="https://www.instagram.com/ezesouza_a?igsh=MXJ6MGZld21xMGpodw==" target="_blank">
                     <img src="img/logo_instagram.png" alt="Instagram" class="social-logo">
                 </a>
+                
                 <a href="https://x.com/SouzaEze?t=zkKELhseNcKTVGsHj3_G1w&s=09" target="_blank">
                     <img src="img/logo_X.png" alt="X (Twitter)" class="social-logo">
                 </a>
