--- a/pages/sobre_mi.html
+++ b/pages/sobre_mi.html
@@ -22,9 +22,11 @@
         </div>
     </header>
     <main>
-        <div class="profile-container">
-            <div class="profile-info">
-                <h2>Sobre Mí</h2>
+        <div class="container">
+            <div class="text-section">
+                <h1>
+                    <u>Sobre Mí</u>
+                </h1>
                 <p>
                     Me llamo Ezequiel, tengo 20 años y soy un estudiante de UADE, donde curso la Licenciatura en 
                     Gestión de Tecnología de la Información. La tecnología siempre me gustó y me llamó la atención; 
@@ -53,13 +55,16 @@
                     una persona responsable, amigable, divertida, trabajadora y un buen amigo y compañero. Siempre estoy dispuesto a ayudar 
                     y ofrecer consejos cuando alguien lo necesita.
                 </p>
-                    
+            </div>
+            <div class="image-section">
                 <div>
                     <a href="https://escuelahumanos.edu.ar/instalaciones/" target="_blank">
                         <img src="../img/humanos.webp" alt="Imagen de Escuela Humanos" style="max-width: 400px;">
                     </a>
                     <br>
                     <i>Escuela "Humanos"</i>
+                    <br>
+                    <br>
                 </div>
                 <div>
                     <a href="https://institutoamanecer.edu.ar/" target="_blank">
