--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-container">
-            <h1>Ez</h1>
+            <h1>EZ</h1>
             <nav>
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
@@ -22,22 +22,16 @@
         </div>
     </header>
     <main>
-        <div class="profile-container">
-            <div class="profile-info">
-                <h2>
-                    <u>Contacto personal</u>
-                </h2>
-                <p>✳️Correo electrónico:&nbsp;<a href="mailto:ezequielsouza.es@gmail.com">ezequielsouza.es@gmail.com</a></p>
-                <p>✳️Número de teléfono:&nbsp;(+54) 11 6254-1309</p>
-                <p>✳️LinkedIn:&nbsp;<a href="https://www.linkedin.com/in/ezequiel-souza-arraigada-374433324/" target="_blank">Aquí</a></p>
-                <br>
-                <div style="text-align: center;">
-                    <img src="../img/fotopersonal2.webp" alt="Foto de Ezequiel" style="max-width: 680px;">
-                    <br>
-                    <i>Foto de perfil de Ezequiel</i>
-                    <br>
-                    <br>
-                </div>
+        <div class="contact-container">
+            <h2>
+                <u>Contacto personal</u>
+            </h2>
+            <p>✳️Correo electrónico:&nbsp;<a href="mailto:ezequielsouza.es@gmail.com">ezequielsouza.es@gmail.com</a></p>
+            <p>✳️Número de teléfono:&nbsp;(+54) 11 6254-1309</p>
+            <p>✳️LinkedIn:&nbsp;<a href="https://www.linkedin.com/in/ezequiel-souza-arraigada-374433324/" target="_blank">Aquí</a></p>
+            <br>
+            <div class="profile-photo-container">
+                <img src="../img/fotopersonal2.webp" alt="Foto de Ezequiel" class="profile-photo">
             </div>
         </div>    
     </main>
