--- a/pages/curriculum.html
+++ b/pages/curriculum.html
@@ -22,8 +22,8 @@
         </div>
     </header>
     <main>
-        <div class="profile-container">
-            <div class="profile-info">
+        <div class="container">
+            <div class="text-section">
                 <h1>
                     <u>Currículum Vitae</u>
                 </h1>
